--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   <li>
     <%= link_to "Edit", edit_article_path(@article) %>
   </li>
-  <li><%= link_to "Destroy", article_path(@article),method: :delete,data: { confirm: "Are you sure?"} %>\
+  <li><%= link_to "Destroy", article_path(@article),method: :delete,data: { confirm: "Are you sure?"} %>
   </li>
 </ul>
 
